# transformers-from-scratch

./: .gitignore  AGENTS.md  README.md  benchmarking_csv.py  benchmarking_html.py  data.py  main.py  models.py  pyproject.toml  render_benchmark_html.py  report.py  training.py
benchmarks/: benchmarking.csv  index.html  overlap.csv
models/: __init__.py  attention.py  base.py  logreg.py  self_attention.py  temporal.py
src/: benchmarking_csv.py  benchmarking_html.py  epoch_aggregator.py  export.py  render_benchmark_html.py  report.py  training.py  wandb_init.py
src/benchmarking/: __init__.py  csv.py  html.py  overlap.py
src/models/: __init__.py  attention.py  bahdanau_attention.py  base.py  logreg.py  metrics.py  mha.py  mlp.py  multilayer.py  multilayer_transformer.py  registry.py  self_attention.py  self_attention_qkv.py  self_attention_qkv_pos.py  singlelayer_transformer.py  temporal.py  transformer_block.py
src/reporting/: attention_viz.py  epoch_aggregator.py  export.py  misclassification.py  report.py  training_logger.py  wandb_init.py
src/tasks/: __init__.py  aa_plus_bb_equals_cc.py  any_abs_gt_one.py  arithmetic_common.py  base.py  generation.py  has_all_tokens.py  has_pos_and_neg.py  multi_digit_sum.py  registry.py  sampling.py  sign_of_second_place.py  sign_of_winner.py  single_digit_string_sum.py  single_digit_string_sum_swapped.py  single_digit_sum.py  (+1 more)
tasks/: __init__.py  any_abs_gt_one.py  base.py  generation.py  has_all_tokens.py  registry.py  sign_of_winner.py
templates/: benchmarks.html  benchmarks.html.j2  model_report.css
