[project]
name = "transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]
